<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better Together</string>
    <string name="app_tagline">Better Together, Forever</string>
    <string name="app_logo">BT Logo</string>
    <string name="login_cta_title">Dedicated Couples Wishlist</string>
    <string name="login_cta_text">Don’t let your shared wishes \nfall through ever again</string>
    <string name="login_cta_button_primary">Login</string>
    <string name="login_cta_button_secondary">Create my account</string>
    <string name="add_couple_cta_title">Invite your Better-half!</string>
    <string name="add_couple_cta_text">Send a personal invitation \nto your partner via email</string>
    <string name="add_couple_cta_button_primary">Send Invite</string>
    <string name="add_couple_cta_button_secondary">Skip</string>
    <string name="accept_couple_cta_title">You have been Invited!</string>
    <string name="accept_couple_cta_text">Your partner has setup a \nshared wishlist and wants \nto do more together</string>
    <string name="accept_couple_partner_name">PRAGYA SAXENA</string>
    <string name="accept_couple_partner_email">saxena.pragya8@gmail.com</string>
    <string name="accept_couple_cta_button_primary">Accept Invitation</string>
    <string name="accept_couple_cta_button_secondary">Decline</string>
    <string name="welcome_cta_title">Welcome!</string>
    <string name="welcome_cta_text_1">A private place has been created for both of you.</string>
    <string name="welcome_cta_text_2">Drop a love-note or \nfulfill each other’s wishes. \nBe in love together, forever.</string>
    <string name="welcome_cta_button_primary">Let\'s Begin</string>
    <string name="secret_message_cta_user_name">Pranav,</string>
    <string name="secret_message_cta_partner_name">Pragya</string>
    <string name="secret_message_cta_updated_on">April, 24</string>
    <string name="secret_message_cta_display">I love you my smarty pants!</string>
    <string name="wishlist_name">Wishlist Name</string>
    <string name="wishlist_summary">4/15 items</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_couple">AddCoupleActivity</string>
    <string name="title_activity_secret_message">SecretMessageActivity</string>
    <string name="title_activity_accept_added_couple">AcceptAddedCoupleActivity</string>
    <string name="title_activity_pending_acceptance">PendingAcceptanceActivity</string>
    <string name="title_activity_lets_begin">LetsBeginActivity</string>
    <string name="secret_message_cta_add_msg">add secret message</string>
    <string name="title_activity_add_new_list">AddNewListActivity</string>
    <string name="title_activity_wishlist_items">WishlistItemsActivity</string>
    <string name="title_activity_add_wish_list_item">AddWishListItemActivity</string>
    <string name="title_activity_delete_wishlist_items">DeleteWishlistItemsActivity</string>
    <string name="title_activity_delete_list_items">DeleteListItemsActivity</string>
    <string name="title_activity_edit_wishlist_item">EditWishlistItemActivity</string>
    <string name="title_activity_add_secret_message">AddSecretMessageActivity</string>

</resources>
