<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/setup_scroll_layout"
    tools:context="com.iwl.bettertogforever.AcceptAddedCoupleActivity" >
    
    <RelativeLayout
        android:id="@+id/layout_center"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            style="@style/setup_linear_layout" >

            <ImageView
                android:id="@+id/bt_logo"
                style="@style/image_linear_layout"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/bt_logo" />

            <TextView
                android:id="@+id/accept_couple_cta_title"
                style="@style/setup_text_primary"
                android:text="@string/accept_couple_cta_title" />

            <TextView
                android:id="@+id/accept_couple_cta_text"
                style="@style/setup_text_secondary"
                android:text="@string/accept_couple_cta_text" />

            <RelativeLayout
                android:id="@+id/edit_email"
                style="@style/setup_relative_layout"
                android:layout_marginTop="46dp" >
	            
	            <ImageView
	                android:id="@+id/info_box"
          	  	    style="@style/image_relative_layout"
	                android:contentDescription="@string/app_logo"
	                android:src="@drawable/info_box" />

	            <TextView
	                android:id="@+id/accept_couple_partner_name"
	                style="@style/setup_text_primary"
	                android:layout_centerHorizontal="true"
	                android:layout_marginTop="21dp"
	                android:text="@string/accept_couple_partner_name" />

	            <TextView
	                android:id="@+id/accept_couple_partner_phone"
	                style="@style/text_primary"
	                android:layout_below="@+id/accept_couple_partner_name"
	                android:layout_centerHorizontal="true"
	                android:layout_marginTop="4dp"
	                android:text="@string/accept_couple_partner_phone" />
	            
	        </RelativeLayout>

            <Button
                android:id="@+id/addCoupleButton"
                style="@style/button_primary"
                android:layout_marginTop="20dp"
                android:onClick="acceptButtonClicked"
                android:text="@string/accept_couple_cta_button_primary" />

            <Button
                android:id="@+id/declineCoupleButton"
                style="@style/button_secondary"
                android:onClick="declineButtonClicked"
                android:text="@string/accept_couple_cta_button_secondary" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>