<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/setup_scroll_layout_invert"
    tools:context="com.iwl.bettertogforever.LetsBeginActivity" >
    
    <RelativeLayout
        android:id="@+id/layout_center"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            style="@style/setup_linear_layout" >

            <ImageView
                android:id="@+id/bt_logo"
                style="@style/image_linear_layout"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/bt_logo_invert" />

            <TextView
                android:id="@+id/add_couple_cta_title"
                style="@style/text_invert_big"
                android:text="@string/welcome_cta_title" />

            <TextView
                android:id="@+id/add_couple_cta_text_1"
                style="@style/text_invert"
                android:layout_marginTop="20dp"
                android:text="@string/welcome_cta_text_1" />
            
            <TextView
                android:id="@+id/add_couple_cta_text_2"
                style="@style/text_invert"
                android:layout_marginTop="47dp"
                android:text="@string/welcome_cta_text_2" />

            <RelativeLayout
                android:id="@+id/edit_email"
                style="@style/setup_relative_layout"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp" >
	            
	            <ImageView
	                android:id="@+id/button_invert_box"
          	  	    style="@style/image_relative_layout"
                	android:layout_marginTop="20dp"
	                android:contentDescription="@string/app_logo"
	                android:src="@drawable/button_invert_box" />
	            
	            <Button
	                android:id="@+id/letsBegin"
	                style="@style/button_primary_invert"
	                android:onClick="letsBeginClicked"
	                android:text="@string/welcome_cta_button_primary" />
	            
	        </RelativeLayout>

            

        </LinearLayout>
    </RelativeLayout>

</ScrollView>
