<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/wishlist_box"
        style="@style/wishlist_box_layout"
        android:layout_alignParentLeft="true" >

        <TextView
            android:id="@+id/wishlist_name"
            style="@style/para_primary_bold"
            android:layout_marginRight="40dp"
            android:gravity="start"
            android:text="@string/wishlist_name" />

        <TextView
            android:id="@+id/wishlist_summary"
            style="@style/para_secondary"
            android:layout_marginRight="40dp"
            android:gravity="start"
            android:text="@string/wishlist_summary" />
    </LinearLayout>

    <ImageView
        android:id="@+id/next_icon"
        style="@style/image_relative_layout"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/next_icon" />

</RelativeLayout>