<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab1"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        style="@style/tab_scroll_layout"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/layout_center"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                style="@style/setup_linear_layout"
                android:layout_alignParentTop="true" >

                <TextView
                    android:id="@+id/secret_message_cta_user_name"
                    style="@style/text_primary_bold"
                    android:gravity="center_vertical|start"
                    android:text="@string/secret_message_cta_user_name" />

                <LinearLayout style="@style/secret_message_box_layout" >

                    <TextView
                        android:id="@+id/secret_message_cta_display"
                        style="@style/text_invert_big"
                        android:lineSpacingMultiplier="1.1"
                        android:text="@string/secret_message_cta_display" />
                </LinearLayout>

                <TextView
                    android:id="@+id/secret_message_cta_partner_name"
                    style="@style/text_primary_bold"
                    android:gravity="center_vertical|end"
                    android:text="@string/secret_message_cta_partner_name" />

                <TextView
                    android:id="@+id/secret_message_cta_updated_on"
                    style="@style/text_secondary_small"
                    android:gravity="center_vertical|end"
                    android:text="@string/secret_message_cta_updated_on" />
            </LinearLayout>

            <Button
                android:id="@+id/secret_message_cta_add_msg"
                style="@style/action_primary"
                android:onClick="addSecretMsgClicked"
                android:paddingBottom="5dp" />

            <ImageView
                android:id="@+id/lovenote_icon"
                style="@style/image_relative_layout"
                android:layout_alignRight="@+id/secret_message_cta_add_msg"
                android:layout_alignTop="@+id/secret_message_cta_add_msg"
                android:layout_marginRight="13dp"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/lovenote_icon" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>