<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_invert"
    android:fillViewport="true"
    tools:context="com.iwl.bettertogforever.MainActivity" >

    <RelativeLayout
        android:id="@+id/layout_center"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            style="@style/layout_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" >

            <ImageView
                android:id="@+id/bt_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/app_logo"
                android:scaleType="center"
                android:src="@drawable/bt_logo" />

            <TextView
                android:id="@+id/login_cta_title"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/login_cta_title"
                android:textColor="@color/app_primary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_cta_text"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/login_cta_text"
                android:textColor="@color/app_secondary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="textEmailAddress"
                android:textColor="@color/app_primary" />

            <EditText
                android:id="@+id/passwd"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="textPassword"
                android:textColor="@color/app_primary" />

            <Button
                android:id="@+id/signin"
                style="@style/button_primary"
                android:layout_marginTop="20dp"
                android:onClick="signInButtonClicked"
                android:text="@string/login_cta_button_primary" />

            <Button
                android:id="@+id/signup"
                style="@style/button_secondary"
                android:onClick="signUpButtonClicked"
                android:text="@string/login_cta_button_secondary" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>